--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="background-color: rgb(15, 15, 15);">
     <header style="color: white;">
         <h1>Owl Programmer</h1>
-        <h1><a href="">github</a></h1>
+        <h1><a href="https://github.com/owlprogrammer">github</a></h1>
         <h2>Full Stack Web Developer</h2>
         <h2>Qualifications: </h2>
         <ul>
